fasdapi中间件、Session、Cookie

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>视图模版</title>
+    <title>home</title>
 </head>
 <body>
-这个是传入的5555参数变量 {{id}}
+home
+当前cookie
+<p>{{cookie}}</p>
+当前session
+<p>{{session}}</p>
 </body>
 </html>
