1、解决swagger无法加载js、css等静态资源问题、OAuth2分析 2、跨域请求无法访问配置

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>home</title>
+    <title>FasTapi</title>
 </head>
 <body>
-home
-当前cookie
-<p>{{cookie}}</p>
-当前session
-<p>{{session}}</p>
+<h3>门户首页</h3>
 </body>
 </html>
