--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
     <script src="{{ url_for('static', path='/js/jquery.magnific-popup.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/jquery.meanmenu.js') }}"></script>
     <script src="{{ url_for('static', path='/js/plugins.js') }}"></script>
-    <script src="{{ url_for('static', path='/js/socket.io.min.js') }}"></script>
+{#    <script src="{{ url_for('static', path='/js/socket.io.min.js') }}"></script>#}
     <script src="{{ url_for('static', path='/js/main.js') }}"></script>
 {#    {{ moment.include_moment(local_js=url_for('static', path='/js/moment-with-locales.min.js')) }}#}
     <script type="text/javascript">
