--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -40,8 +40,8 @@
 
 {% block scripts %}
     {{ super() }}
-    <script type="text/javascript">
-        const socket = io('/');
-    </script>
+{#    <script type="text/javascript">#}
+{#        const socket = io('/');#}
+{#    </script>#}
     <script src="{{ url_for('static', path='/chat/js/chat.js') }}"></script>
 {% endblock %}
