--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -21,6 +21,7 @@
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-group">
+                    <input id="user_id" type="hidden" value="{{ user_id }}">
                     <label for="chat-gpt-input"></label>
                     <textarea class="form-control" id="chat-gpt-input" placeholder="输入问题描述信息" rows="3"
                               resize="none" autocomplete="off"></textarea>
